// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The render group component Button fields inside render groups Button RenderGroup snapshots Renders a regular button 1`] = `
<div
  className="caldera-config-field-setup"
>
  <div
    className="caldera-config-group"
  >
    <div
      className="caldera-config-field"
    >
      <label
        htmlFor="RendersARegularButtonSnapShotTest"
      >
        Submit
      </label>
      <button
        aria-describedby={null}
        className="field-config field-config"
        disabled={false}
        id="RendersARegularButtonSnapShotTest"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`The render group component Button fields inside render groups Button RenderGroup snapshots Renders a submit input 1`] = `
<div
  className="caldera-config-field-setup"
>
  <div
    className="caldera-config-group"
  >
    <div
      className="caldera-config-field"
    >
      <label
        htmlFor="cf-button-example"
      >
        Submit
      </label>
      <input
        aria-describedby={null}
        className="field-config field-config"
        disabled={false}
        id="cf-button-example"
        onBlur={undefined}
        onClick={[Function]}
        onFocus={undefined}
        required={undefined}
        type="submit"
        value={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`The render group component Rendering with fields Does not error when passed empty array of fields 1`] = `
<div
  className="caldera-config-field-setup"
/>
`;

exports[`The render group component Rendering with fields Works with a few fields 1`] = `
<div
  className="caldera-config-field-setup"
>
  <div
    className="caldera-config-group"
  >
    <div
      className="caldera-config-field"
    >
      <label
        htmlFor="cf-something-apikey"
      >
        API Key
      </label>
      <input
        aria-describedby={null}
        className="field-config field-config"
        disabled={false}
        id="cf-something-apikey"
        onBlur={undefined}
        onChange={[Function]}
        onFocus={undefined}
        required={false}
        type="text"
        value={undefined}
      />
    </div>
  </div>
  <div
    className="caldera-config-group"
  >
    <input
      aria-describedby={null}
      className="field-config field-config"
      disabled={false}
      id="cf-something-sequence-id"
      onBlur={undefined}
      onChange={[Function]}
      onFocus={undefined}
      required={false}
      type="hidden"
      value={undefined}
    />
  </div>
  <div
    className="caldera-config-group"
  >
    <div
      className="caldera-config-field"
    >
      <label
        htmlFor="cf-something-tags"
      >
        Tags
      </label>
      <input
        aria-describedby={null}
        className="field-config field-config"
        disabled={false}
        id="cf-something-tags"
        onBlur={undefined}
        onChange={[Function]}
        onFocus={undefined}
        required={false}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`The render group component Rendering with fields Works with one text field 1`] = `
<div
  className="caldera-config-field-setup"
>
  <div
    className="caldera-config-group"
  >
    <div
      className="caldera-config-field"
    >
      <label
        htmlFor="sz"
      >
        Tags
      </label>
      <input
        aria-describedby={null}
        className="field-config field-config"
        disabled={false}
        id="sz"
        onBlur={undefined}
        onChange={[Function]}
        onFocus={undefined}
        required={false}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`The render group component adding blur and focus Adds the props 1`] = `
<div
  className="caldera-config-field-setup"
>
  <div
    className="caldera-config-group"
  >
    <div
      className="caldera-config-field"
    >
      <label
        htmlFor="cf-something-tags"
      >
        Tags
      </label>
      <input
        aria-describedby={null}
        className="field-config field-config"
        disabled={false}
        id="cf-something-tags"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        required={false}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</div>
`;

exports[`The render group component class structure Matches snapshot 1`] = `
<div
  className="caldera-config-field-setup"
>
  <div
    className="caldera-config-group"
  >
    <div
      className="caldera-config-field"
    >
      <label
        htmlFor="cf-something-else"
      >
        Thing
      </label>
      <input
        aria-describedby={null}
        className="field-config field-config"
        disabled={false}
        id="cf-something-else"
        onBlur={undefined}
        onChange={[Function]}
        onFocus={undefined}
        required={false}
        type="text"
        value={undefined}
      />
    </div>
  </div>
  <div
    className="caldera-config-group"
  >
    <div
      className="caldera-config-field"
    >
      <label
        htmlFor="cf-something-tags"
      >
        Tags
      </label>
      <input
        aria-describedby={null}
        className="field-config field-config"
        disabled={false}
        id="cf-something-tags"
        onBlur={undefined}
        onChange={[Function]}
        onFocus={undefined}
        required={false}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</div>
`;
